// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecommendedItem /> should handle "size" prop 1`] = `
<RecommendedItem
  currencyGrapheme="₽"
  imageSrc="https://cdn3.static1-sima-land.com/items/29455/0/1600.jpg?v=1617955476"
  name="Ножницы портновские, 10, 26 см, цвет чёрный"
  oldPrice={250}
  onClick={[MockFunction]}
  price={225}
  quickViewButtonProps={
    Object {
      "onClick": [MockFunction],
    }
  }
  size={
    Object {
      "l": 2,
      "m": 2,
      "s": 2,
      "xl": 2,
      "xs": 2,
    }
  }
  url="https://www.sima-land.ru/123456"
>
  <div
    className="root size-xs-2 size-s-2 size-m-2 size-l-2 size-xl-2"
  >
    <div
      className="image-wrapper"
    >
      <img
        alt="Ножницы портновские, 10, 26 см, цвет чёрный"
        className="image"
        src="https://cdn3.static1-sima-land.com/items/29455/0/1600.jpg?v=1617955476"
      />
      <div
        className="quick-view-button"
        data-testid="reco-item:quick-view"
        onClick={[MockFunction]}
        role="button"
      >
        <QuickViewSVG
          className="svg"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="svg"
            height={24}
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0 1 11.5 20.5a9 9 0 1 1 9-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 0 1-2.122 2.122zM9 10h1V9a1.5 1.5 0 1 1 3 0v1h1a1.5 1.5 0 1 1 0 3h-1v1a1.5 1.5 0 1 1-3 0v-1H9a1.5 1.5 0 1 1 0-3zm2.5-4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12z"
            />
          </svg>
        </QuickViewSVG>
      </div>
    </div>
    <div
      className="prices-wrapper"
    >
      <Price
        className="price"
        currencyGrapheme="₽"
        value={225}
      >
        <span
          className="root price"
        >
          225 ₽
        </span>
      </Price>
      <Price
        className="old-price"
        crossedOut={true}
        currencyGrapheme="₽"
        value={250}
      >
        <span
          className="root old-price crossed-out"
        >
          250 ₽
        </span>
      </Price>
    </div>
    <ForwardRef(Link)
      className="link"
      color="black"
      href="https://www.sima-land.ru/123456"
      onClick={[MockFunction]}
    >
      <a
        className="link link"
        href="https://www.sima-land.ru/123456"
        onClick={[MockFunction]}
      >
        Ножницы портновские, 10, 26 см, цвет чёрный
      </a>
    </ForwardRef(Link)>
  </div>
</RecommendedItem>
`;

exports[`<RecommendedItem /> should renders correctly 1`] = `
<RecommendedItem
  currencyGrapheme="₽"
  imageSrc="https://cdn3.static1-sima-land.com/items/29455/0/1600.jpg?v=1617955476"
  name="Ножницы портновские, 10, 26 см, цвет чёрный"
  oldPrice={250}
  onClick={[MockFunction]}
  price={225}
  quickViewButtonProps={
    Object {
      "onClick": [MockFunction],
    }
  }
  url="https://www.sima-land.ru/123456"
>
  <div
    className="root size-xs-4 size-s-3 size-m-2 size-l-2 size-xl-2"
  >
    <div
      className="image-wrapper"
    >
      <img
        alt="Ножницы портновские, 10, 26 см, цвет чёрный"
        className="image"
        src="https://cdn3.static1-sima-land.com/items/29455/0/1600.jpg?v=1617955476"
      />
      <div
        className="quick-view-button"
        data-testid="reco-item:quick-view"
        onClick={[MockFunction]}
        role="button"
      >
        <QuickViewSVG
          className="svg"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="svg"
            height={24}
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0 1 11.5 20.5a9 9 0 1 1 9-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 0 1-2.122 2.122zM9 10h1V9a1.5 1.5 0 1 1 3 0v1h1a1.5 1.5 0 1 1 0 3h-1v1a1.5 1.5 0 1 1-3 0v-1H9a1.5 1.5 0 1 1 0-3zm2.5-4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12z"
            />
          </svg>
        </QuickViewSVG>
      </div>
    </div>
    <div
      className="prices-wrapper"
    >
      <Price
        className="price"
        currencyGrapheme="₽"
        value={225}
      >
        <span
          className="root price"
        >
          225 ₽
        </span>
      </Price>
      <Price
        className="old-price"
        crossedOut={true}
        currencyGrapheme="₽"
        value={250}
      >
        <span
          className="root old-price crossed-out"
        >
          250 ₽
        </span>
      </Price>
    </div>
    <ForwardRef(Link)
      className="link"
      color="black"
      href="https://www.sima-land.ru/123456"
      onClick={[MockFunction]}
    >
      <a
        className="link link"
        href="https://www.sima-land.ru/123456"
        onClick={[MockFunction]}
      >
        Ножницы портновские, 10, 26 см, цвет чёрный
      </a>
    </ForwardRef(Link)>
  </div>
</RecommendedItem>
`;
